tests/any2mochi/go/typed_list_negative.error
line 1: parse error: unexpected token "expect" (expected declaration)
  fun expect(cond: bool) {}
